# tranmf

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  fontdump  pyproject.toml  setup.py
src/: base.rs  lib.rs  losses.rs  scratch.rs
src/tranmf/: _nmf.py  _nmf.pyx  bboxes.py  jax_nmf.py  nmf.py  preprocessing.py  projection.py  rust_projection.py
tests/: test__nmf.py  test_nmf.py  test_preprocessing.py
