[package]
name = "tranmf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genevo = ">=0.7.1"
ndarray = ">=0.15.6"
ndarray-stats = "0.5.1"
rand = ">=0.8.5"
memory-stats = ">=1.1.0"

[lib]
name = "tranmf"
path = "src/lib.rs"
crate-type = ["cdylib"]
