[project]
name = "tranmf"
dynamic = ["version"]
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT"}
keywords = []
authors = [
    { name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "mlflow>=2.10.1",
    "setuptools>=69.0.3",
]
version = "0.1.0"

[project.urls]
Documentation = "https://github.com/00sapo/tranmf#readme"
Issues = "https://github.com/00sapo/tranmf/issues"
Source = "https://github.com/00sapo/tranmf"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.21.0",
    "ipdb>=0.13.13",
]
